apps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wap-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
      - path: /admin/
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game
            port: 
              number: 8080
    host: whackapod.example.com
